--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_HOST=localhost
-DB_NAME=portfolio_db
-DB_USER=root
-DB_PASS=
+DB_HOST=sql110.infinityfree.com
+DB_NAME=if0_40543103_db_portfolio
+DB_USER=if0_40543103
+DB_PASS=CIJmP4nFoTu8TA
